force-app/main/default/objects/Account/fields/Max_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Max_Opportunity__c</fullName>
    <label>Max Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>