force-app/main/default/objects/Account/fields/VIP_Status__c.field-meta.xml
<CustomField>
    <fullName>VIP_Status__c</fullName>
    <label>VIP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>